# cdp_rs

./: AI_AGENT_OCULUS.html  Cargo.toml  DOCS.html  Dockerfile  MODULAR_README.md  MODULE_README.md  README.html  README.md  SEMANTIC_DOCS.html  SKILL.md  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml  test.yml
book/: iteration_32.md
src/: arxiv_endorse.rs  arxiv_endorse_request.rs  arxiv_request_endorse.rs  auto_wait.rs  automation.rs  browser.rs  browser_pool.rs  cdp_client.rs  check_responses.rs  ci.rs  cookie.rs  dialog.rs  endorsement_system.rs  final_endorsements.rs  find_400_endorsers.rs  find_endorsers.rs  find_endorsers_rust.rs  gmail_oauth.rs  js.rs  lib.rs  main.rs  network.rs  network_intercept.rs  page.rs  pdf.rs  screenshot.rs  search_endorsers.rs  send_bulk_endorsements.rs  send_confirmed_endorsements.rs  send_endorsement_emails.rs  send_physicists_endorsements.rs  send_verified_endorsements.rs  test_runner.rs  upload.rs  verify_emails.rs  vixra_submit.rs
src/analysis/: mod.rs
src/analysis/critic/: engine.rs  mod.rs  rules.rs
src/analysis/integrator/: merger.rs  mod.rs  transformer.rs
src/analysis/validator/: mod.rs  rules.rs  types.rs
src/arxiv/: codes.rs  mod.rs  send.rs  submit.rs
src/database/: mod.rs
src/database/models/: email.rs  endorsement.rs  mod.rs  user.rs
src/database/pool/: manager.rs  mod.rs
src/database/sqlite/: connection.rs  error.rs  mod.rs  query.rs
src/email/: mod.rs
src/email/endorsements/: mod.rs  (+2 more)
src/orchestrator/: mod.rs
tests/: database_tests.rs  integration.rs  orchestrator_tests.rs
(+35 files in other folders)
