[package]
name = "cdp_rs"
version = "0.4.0"
edition = "2021"

# Core browser automation
[[bin]]
name = "cdp_rs"
path = "src/main.rs"

# Email tools (using email module)
[[bin]]
name = "send_physicists"
path = "src/bin/send_physicists.rs"

# arXiv tools (using arxiv module)
[[bin]]
name = "arxiv"
path = "src/bin/arxiv.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.21"
url = "2"
dirs = "5"
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"

[lib]
name = "cdp_rs"
path = "src/lib.rs"
